<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="183dp"
        android:layout_height="129dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116"
        app:srcCompat="@drawable/hello" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/emailpass_bg"
        android:ems="10"
        android:hint="@string/txEmail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="10pt"
        android:drawableLeft="@drawable/ic_action_usern"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.093" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/emailpass_bg"
        android:ems="10"
        android:hint="@string/txPass"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="10pt"
        android:drawableLeft="@drawable/ic_action_pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEmail"
        app:layout_constraintVertical_bias="0.031"
        app:passwordToggleEnabled="true"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="143dp"
        android:layout_height="42dp"
        android:background="@android:color/background_light"
        android:fontFamily="sans-serif-black"
        android:text="@string/buttonLogin"
        android:textSize="8pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        app:layout_constraintVertical_bias="0.118" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="167dp"
        android:layout_height="28dp"
        android:layout_marginBottom="124dp"
        android:padding="5dp"
        android:text="@string/tvAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.376" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="94dp"
        android:layout_height="31dp"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:text="@string/btnSignUp"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.06" />


</androidx.constraintlayout.widget.ConstraintLayout>